Bug 301056 - Dolphin crashes on zoomin/zoomout in minitarures show mode
Summary: Dolphin crashes on zoomin/zoomout in minitarures show mode
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-02 14:36 UTC by Pavel ALexeev (aka Pahan-Hubbitus)
Modified: 2012-06-02 17:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel ALexeev (aka Pahan-Hubbitus) 2012-06-02 14:36:51 UTC
Application: dolphin (2.0)
KDE Platform Version: 4.8.3 (4.8.3)
Qt Version: 4.8.2
Operating System: Linux 3.3.7-1.fc17.x86_64 x86_64
Distribution: "Fedora release 17 (Beefy Miracle)"

-- Information about the crash:
Enable showing minitures in folder with several png files. By mouse wheel try zoomin/zoomout - each time reproducible chrash happened.

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7f71fd0e4880 (LWP 21071))]

Thread 2 (Thread 0x7f71f1c9e700 (LWP 21072)):
#0  0x0000003d606e8eef in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x0000003c646479b4 in g_main_context_poll (n_fds=1, fds=0x7f71ec002c00, timeout=-1, context=0x7f71ec0009a0, priority=<optimized out>) at gmain.c:3440
#2  g_main_context_iterate (context=context@entry=0x7f71ec0009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at gmain.c:3141
#3  0x0000003c64647ad4 in g_main_context_iteration (context=0x7f71ec0009a0, may_block=1) at gmain.c:3207
#4  0x00000038e93a4506 in QEventDispatcherGlib::processEvents (this=0x7f71ec0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00000038e937513f in QEventLoop::processEvents (this=this@entry=0x7f71f1c9dcf0, flags=...) at kernel/qeventloop.cpp:149
#6  0x00000038e93753c8 in QEventLoop::exec (this=0x7f71f1c9dcf0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00000038e9278650 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00000038e9355b4f in QInotifyFileSystemWatcherEngine::run (this=0x174fb80) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00000038e927b5eb in QThreadPrivate::start (arg=0x174fb80) at thread/qthread_unix.cpp:307
#10 0x0000003d60e07d14 in start_thread (arg=0x7f71f1c9e700) at pthread_create.c:309
#11 0x0000003d606f199d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f71fd0e4880 (LWP 21071)):
[KCrash Handler]
#6  0x0000002000000008 in ?? ()
#7  0x00000038eabca37c in QApplicationPrivate::notify_helper (this=this@entry=0x1588fd0, receiver=receiver@entry=0x1d49760, e=e@entry=0x7fff1370cd00) at kernel/qapplication.cpp:4551
#8  0x00000038eabce7fa in QApplication::notify (this=0x7fff1370d7e0, receiver=0x1d49760, e=0x7fff1370cd00) at kernel/qapplication.cpp:4412
#9  0x00000038eba45ae6 in KApplication::notify (this=0x7fff1370d7e0, receiver=0x1d49760, event=0x7fff1370cd00) at /usr/src/debug/kdelibs-4.8.3/kdeui/kernel/kapplication.cpp:311
#10 0x00000038e93763ee in QCoreApplication::notifyInternal (this=0x7fff1370d7e0, receiver=0x1d49760, event=0x7fff1370cd00) at kernel/qcoreapplication.cpp:915
#11 0x00000038eabcaa26 in sendEvent (event=0x7fff1370cd00, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:231
#12 QApplicationPrivate::dispatchEnterLeave (enter=0x1d49760, leave=<optimized out>) at kernel/qapplication.cpp:2816
#13 0x00000038eac4490e in QApplication::x11ProcessEvent (this=0x7fff1370d7e0, event=0x7fff1370d2d0) at kernel/qapplication_x11.cpp:3719
#14 0x00000038eac6a60c in x11EventSourceDispatch (s=s@entry=0x158be00, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#15 0x0000003c646476e5 in g_main_dispatch (context=0x158bc30) at gmain.c:2539
#16 g_main_context_dispatch (context=context@entry=0x158bc30) at gmain.c:3075
#17 0x0000003c64647a18 in g_main_context_iterate (context=context@entry=0x158bc30, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at gmain.c:3146
#18 0x0000003c64647ad4 in g_main_context_iteration (context=0x158bc30, may_block=1) at gmain.c:3207
#19 0x00000038e93a44e6 in QEventDispatcherGlib::processEvents (this=0x1561fb0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#20 0x00000038eac6a2ee in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:207
#21 0x00000038e937513f in QEventLoop::processEvents (this=this@entry=0x7fff1370d6a0, flags=...) at kernel/qeventloop.cpp:149
#22 0x00000038e93753c8 in QEventLoop::exec (this=0x7fff1370d6a0, flags=...) at kernel/qeventloop.cpp:204
#23 0x00000038e937a1b8 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#24 0x00000038f06467f7 in kdemain (argc=5, argv=0x7fff1370d918) at /usr/src/debug/kde-baseapps-4.8.3/dolphin/src/main.cpp:89
#25 0x0000003d60621735 in __libc_start_main (main=0x400800 <main(int, char**)>, argc=5, ubp_av=0x7fff1370d918, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff1370d908) at libc-start.c:226
#26 0x0000000000400831 in _start ()

Possible duplicates by query: bug 301040, bug 301032, bug 301008, bug 301004, bug 300936.

Reported using DrKonqi
Comment 1 Peter Penz 2012-06-02 15:42:32 UTC
Git commit cf9001189fcbc59aea6632617007b9344f576f45 by Peter Penz.
Committed on 02/06/2012 at 17:41.
Pushed by ppenz into branch 'master'.

Hide tooltip when changing the zoomlevel
FIXED-IN: 4.9.0

M  +1    -0    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/cf9001189fcbc59aea6632617007b9344f576f45
Comment 2 Pavel ALexeev (aka Pahan-Hubbitus) 2012-06-02 17:41:01 UTC
Thank you.