Hide tooltip when changing the zoomlevel

BUG: 301056
FIXED-IN: 4.9.0